--- a/src/app/components/landing/landing.module.css
+++ b/src/app/components/landing/landing.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: var(--bg-dark);
   height: 80vh;
 }
 .content {
